# eed_webscrapping_scripts

./: .env  .gitignore  .project  LICENSE  README.md  dwd.duckdb  main.py  pollenvorhersage  pollenvorhersage.duckdb.wal  pyproject.toml
.dbeaver/: .data-sources.json.bak  .project-metadata.json.bak  data-sources.json  project-metadata.json  project-settings.json
.github/: dependabot.yml
.github/workflows/: CODEOWNERS  ci.yml  daily_scrapping_pollenvorhersage.yml  main.yml  main_on_release.yml  pytests.yml
scripts/: README.md  merge_all_dependabot_prs.sh  merge_dependabot_pr.sh
src/: main.py
src/eed_webscrapping_scripts/: main.py
src/eed_webscrapping_scripts/Pollenvorhersage/: config.yaml  pollenvorhersage.py  utils.py
src/eed_webscrapping_scripts/dwd/: __init__.py  config.yaml  create_views.py  db.py  pollenflug_gefahrenindex.py  utils.py
src/eed_webscrapping_scripts/dwd/local_duckdb/: download_md.sql  playground.sql
src/eed_webscrapping_scripts/dwd/sqls/: information_layer_view.sql  information_layer_view_02.sql  information_layer_view_03_unpivot.sql  information_layer_view_04_features.sql  information_layer_view_base.sql  information_layer_view_unpivot.sql  list_available_tables.sql
src/eed_webscrapping_scripts/eed_basic_utils/: __init__.py  os.py  utils.py
src/eed_webscrapping_scripts/modules/: __init__.py  duckdb_utils.py  eed_polars_utils.py  eed_utils.py  encryption_utils.py  modules.py
src/eed_webscrapping_scripts/pollenvorhersage/: __init__.py  config.yaml  db.py  pollenvorhersage.py  utils.py
src/eed_webscrapping_scripts/pollenvorhersage/websites/: encrypted_website.html
src/eed_webscrapping_scripts/pollenvorhersage_2/: db.py  utils.py
src/eed_webscrapping_scripts/utils/: encrypt_file.py  encrypt_value.py
src/modules/: __init__.py
tests/: .env  conftest.py  test_package_import.py
tests/duckdb_utils/: test_get_db_schema_from_table_name.py  test_tbl_add_primary_key.py  test_tbl_check_if_primary_key_exists.py
tests/dwd/: config.yaml  test_cfg_mock.py  test_integration_dwd.py
tests/eed_basic_utils/: test_import.py
tests/eed_basic_utils/os/: test_file_exists.py
tests/eed_basic_utils/utils/: test_sleep.py
tests/modules/: .env  test_encrypt_decrypt.py  test_load_dotenv_.py
tests/modules/duckdb_utils/: test_add_primary_key.py  test_check_if_primary_key_exists.py  test_database_is_attached.py  test_get_db_schema_tbl_from_table_name.py
tests/modules/eed_polars_utils/: test_create_table_from_lists.py
tests/modules/eed_utils/: test_decode_string.py  test_file_exists.py  test_sleep.py
tests/modules/encryption_utils/: test_encrypt_decrypt_file.py
tests/pollenvorhersage/: test_get_table_definition.py  test_integration.py
