[project]
name = "eed-webscrapping-scripts"
version = "0.4.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EED85", email = "eric.brahmann@eed-solutions.de" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "cryptography>=47.0.0",
    "duckdb==1.5.2",
    "eed-basic-utils",
    "filelock>=3.29.0",
    "gitpython>=3.1.44",
    "loguru>=0.7.3",
    "h11>=0.16.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "selenium>=4.43.0",
    "webdriver-manager>=4.0.2",
    "urllib3>=2.6.3",
    "virtualenv>=21.2.4",
    "debugpy>=1.8.20",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
hello_world = "eed_webscrapping_scripts.cli:hello_world"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 100

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]  # Line too long (let black handle this)

[tool.uv.sources]
eed-basic-utils = { git = "https://github.com/EED-Solutions/eed_basic_utils" }
